tests/errors/control_flow/loop_accumulation_limit.sad
# loop_accumulation_limit test
risk {
    Cycle i = 0 : 100000 {
        i
    }
} trap ValueError e {
    show(e.message)
}
